package onlineTicket;

/**
 * Компонент: TicketActions
 * Версия: 1.0.0
 *
 * Описание: Этот компонент определяет контракты для действий пользователя связанных с действиями над билетами
 * (билеты можно забронировать, можно отменить бронь билетов, можно проверить наличие билетов на выбранный маршрут
 * и дату, после покупки пользователем билетов необходимо обновить информацию о наличии билетов, пользователь
 * может подтвердить покупку билетов после их бронирования, у пользователя должна обновиться информация
 * о состоянии счета после покупки билетов).
 *
 * Изменения:
 * - 1.0.0: Первая версия.
 * - 1.1.0: Добавлена поддержка новой функциональности.
 */

interface TicketActions {

    boolean reserveTicket();

    boolean deductFunds();

    boolean confirmPurchase();

    void updateTicketAvailability();

    boolean cancelReservation();
}
